[package]
name = "telbot-cf-worker"
version = "0.1.0"
edition = "2018"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]

[dependencies]
serde = "1"
serde_json = "1"
# for multipart wasm support
getrandom = { version = "0.2.3", default-features = false, features = ["js"] }

[dependencies.multipart]
version = "0.18.0"
default-features = false
features = ["client"]

[dependencies.telbot-types]
path = "../telbot-types"

[dependencies.worker]
version = "0.0.6"
