[package]
name = "telbot-cf-worker"
version = "0.1.0"
edition = "2018"
authors = ["kiwiyou <kiwiyou@kiwiyou.dev>"]
repository = "https://github.com/kiwiyou/telbot"
license = "MIT"
description = "Telegram API wrapper for cloudflare workers"
categories = ["network-programming"]
keywords = ["telbot", "telegram", "bot", "cloudflare", "workers"]
readme = "../README.md"

[dependencies]
serde = "1"
serde_json = "1"
# for multipart wasm support
getrandom = { version = "0.2.3", default-features = false, features = ["js"] }

[dependencies.multipart]
version = "0.18.0"
default-features = false
features = ["client"]

[dependencies.telbot-types]
path = "../telbot-types"
version = "0.2.0"

[dependencies.worker]
version = "0.0.7"
