[package]
name = "telbot-reqwest"
version = "0.1.0"
edition = "2018"
authors = ["kiwiyou <kiwiyou@kiwiyou.dev>"]
repository = "https://github.com/kiwiyou/telbot"
license = "MIT"
description = "Telegram API wrapper for reqwest client"
categories = ["network-programming"]
keywords = ["telbot", "telegram", "bot", "client", "reqwest"]
readme = "../README.md"

[dependencies]
serde_json = "1.0.70"

[dependencies.reqwest]
version = "0.11.6"
features = ["json", "multipart"]

[dependencies.telbot-types]
path = "../telbot-types"
version = "0.2.0"

[dev-dependencies]
tokio = { version = "1.13.0", features = ["full"] }
