[package]
name = "telbot-types"
version = "0.2.0"
edition = "2018"
authors = ["kiwiyou <kiwiyou@kiwiyou.dev>"]
repository = "https://github.com/kiwiyou/telbot"
license = "MIT"
description = "Telegram API types for telbot"
categories = ["network-programming"]
keywords = ["telbot", "telegram", "bot"]
readme = "../README.md"

[dependencies.serde]
version = "1.0"
features = ["derive"]
