[package]
name = "telbot-ureq"
version = "0.1.0"
edition = "2018"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]

[dependencies]
serde = "1.0.130"
serde_json = "1.0.68"
ureq = { version = "2.3.0", features = ["json"] }

[dependencies.multipart]
version = "0.18.0"
default-features = false
features = ["client"]

[dependencies.telbot-types]
path = "../telbot-types"
